# performative

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  jog-wheel-plan.md  performative.txt  ticket5-plan.md  tickets.txt
.claude/: settings.local.json
crates/performative-analysis/: Cargo.toml
crates/performative-analysis/src/: lib.rs
crates/performative-core/: Cargo.toml
crates/performative-core/src/: app_state.rs  deck.rs  engine.rs  jog.rs  lib.rs
crates/performative-core/tests/: t5_integration.rs
crates/performative-osc/: Cargo.toml
crates/performative-osc/src/: client.rs  lib.rs  messages.rs  scsynth.rs
crates/performative-parser/: Cargo.toml
crates/performative-parser/src/: lib.rs
crates/performative-tui/: Cargo.toml
crates/performative-tui/src/: app.rs  ui.rs
scripts/: analyze.py
src/: main.rs
synthdefs/: compile.scd
