[package]
name = "performative-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
tokio     = { version = "1", features = ["process"] }
anyhow    = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
